--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     font-family: 'Noto Sans', sans-serif;}
 header{
     width: 100%;
-    height:125px ;
+    height:89px ;
 }
 .info-covid-19{
     width: 100% ;
@@ -44,6 +44,7 @@ header{
     padding-right: 7.25px;
 }
 .info-covid-19>span>svg{
+    cursor: pointer;
     margin-left: 7.25px;
 }
 .header{
@@ -54,6 +55,9 @@ header{
     margin-left: 14.348958%;
     margin-right: 14.4270833333%;
 }
+.header-logo>svg{
+    cursor: pointer;
+}
 .header-for-all-menu{
     display: flex;
     align-items: center;
@@ -62,6 +66,7 @@ header{
     color:#0063BD ;
 }
 .header-for-all-menu>span{
+    cursor: pointer;
     font-weight: 600;
     font-size: 16px;
     line-height: 22px;
@@ -70,7 +75,9 @@ header{
     margin-left: 2px;
     white-space: nowrap;
 }
-
+.header-for-all-menu>svg{
+    cursor: pointer;
+}
 .header-menu-child{
     width: 36.0380116959%;
     white-space: nowrap;
@@ -91,6 +98,9 @@ header{
     display: flex;
     padding-left: 18.2%;
 }
+.header-icons>div{
+    cursor: pointer;
+}
 .header-icons>div:nth-child(2){
     margin-right: 45px;
     margin-left: 45px;
@@ -103,6 +113,14 @@ header{
 .header-icons-for-count{
     position: relative;
 }
+
+.header-icons-for-count:hover>svg:nth-of-type(2){
+    animation: mymove 3s infinite ;
+}
+@keyframes mymove {
+    
+    100% {transform: rotate(360deg);}
+  }
 .header-icons-for-count>svg:last-of-type{
     position: absolute;
     top: -3px;
@@ -158,6 +176,9 @@ main{
     padding-left: 14.348958%;
     padding-bottom: 14px;
 }
+.main-shoose>span{
+cursor: pointer;
+}
 .main-shoose>span:last-of-type{
     color:  #004494;
 }
@@ -194,10 +215,11 @@ main{
     padding-bottom: 27px;
 }
 .category-title{
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 14px 0 14px 0;
+    margin: 14px 0 14px 0;
 }
 .category-title>span{
     font-size: 16px;
@@ -220,6 +242,7 @@ main{
     margin-bottom: 8px;
 }
 .category-menu>div>label{
+    cursor: pointer;
     display: flex;
     align-items: center;
     
@@ -247,7 +270,7 @@ border-radius: 1px;
     border-bottom: 1px solid #C9C9C9;
 }
 .color>div{
-    
+    cursor: pointer;
     width: 25px;
     height: 25px;
     border-radius: 50% ;
@@ -280,6 +303,9 @@ border-radius: 1px;
 }
 .choose-money{
    position: relative;
+}
+.choose-money>img{
+    cursor: pointer;
 }
 .line{
     width: 202.5px;
@@ -323,6 +349,7 @@ border-radius: 1px;
     
 }
 .product-start-choose-end{
+    cursor: pointer;
     border: 1px solid #B3C7DF;
     border-radius: 2px;
     padding: 7px 14px 7px 9px;
@@ -341,7 +368,7 @@ border-radius: 1px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    grid-column-gap: 2.6%;
 }
 .products>div>img{
     width: 100%;
@@ -387,12 +414,14 @@ border-radius: 1px;
     color: #5F6D7C; 
     text-decoration: line-through;
 }
-.products>div>div>svg:first-of-type{
+.products>div>svg:first-of-type{
+    cursor: pointer;
     position: absolute;
     top: 9px;
     right: 9px;   
 }
-.products>div>div>svg:last-of-type{
+.products>div>svg:last-of-type{
+    cursor: pointer;
     position: absolute;
     top: 47px;
     right: 9px;  
@@ -403,6 +432,7 @@ border-radius: 1px;
     align-items: center;
 }
 .for-select>span{
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -434,6 +464,7 @@ border-radius: 1px;
     padding-bottom: 80px;
 }
 .advertisement>img{
+    cursor: pointer;
     width: 100%;
 }
 footer{
@@ -452,6 +483,7 @@ footer>div:first-of-type{
     margin-bottom: 25px;
 }
 .about-us-children>p{
+    cursor: pointer;
     font-size: 13px;
     line-height: 35px;
     color: #5F6D7C;
@@ -472,6 +504,9 @@ footer>div:first-of-type{
     width: 10.8333333333%;
     display: flex;
     justify-content: space-between;
+}
+.footer-icons>a{
+    cursor: pointer;
 }
 .footer-end{
     display: flex;
@@ -500,6 +535,9 @@ input[type=checkbox] {
     display: none;
 }
 .br-for-mobile{
+    display: none;
+}
+.filter-for-tablete{
     display: none;
 }
 /* 
@@ -607,7 +645,7 @@ input[type=checkbox] {
         display: none;
     }
     header{
-        height: 87px;
+        height: 62px;
     }
 
     .header-for-all-menu{
@@ -631,16 +669,19 @@ input[type=checkbox] {
         padding-right: 6.25%;
     }
     .svg-for-tablete-header-manu{
+        cursor: pointer;
         display: block;
         margin-right: 23.35px;
     }
     .header-logo{
         display: flex;
         align-items: center;
+        
     }
     .header-logo>svg{
         width: 90px;
         height: 22px;
+        
     }
     .header-icons>div>svg{
         width: 20px;
@@ -713,19 +754,9 @@ input[type=checkbox] {
         padding-top: 22px;
         padding-left:  5.729%; 
         padding-right: 6.25%;
-
     }
     .products{
         margin-left:5px ;
-    }
-    .products>div:nth-child(10){
-        display: none;
-    }
-    .products>div:nth-child(11){
-        display: none;
-    }
-    .products>div:nth-child(12){
-        display: none;
     }
     .products>div{
         width:31.3432835821% ;
@@ -738,6 +769,7 @@ input[type=checkbox] {
         display: flex;
     }
     .filter-for-tablete>div{
+        cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -824,11 +856,11 @@ input[type=checkbox] {
         padding-top: 21px;
         padding-bottom: 8px;
     }
-    .products>div>div>svg:first-of-type{
+    .products>div>svg:first-of-type{
         width: 28.56px;
         height: 28.56px;
     }
-    .products>div>div>svg:last-of-type{
+    .products>div>svg:last-of-type{
 
         width: 28.56px;
         height: 28.56px;
@@ -850,7 +882,7 @@ input[type=checkbox] {
         line-height: 15px;
     }
     header{
-        height: 107px;
+        height: 62px;
     }
     .header{
         height: 62px;
@@ -882,7 +914,6 @@ input[type=checkbox] {
     }
     .main-shop-picture>img{
         height: 145px;
-        padding-bottom: 22px;
     }
     .g-shock{
         left: 4%;
@@ -914,6 +945,86 @@ input[type=checkbox] {
     }
     .products>div{
         width: 47.8134110787%;
+        margin-bottom: 24px;
+    }
+    .products>div>p:first-of-type{
+        display: none;
+    }
+    .products>div>p:last-of-type{
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 19px;
+    }
+    .products>div>div>span:first-of-type{
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .products>div>div>span:last-of-type{
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 16px;
+    }
+    .for-select{
+        margin-top: 9px;
+    }
+    .advertisement{
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        padding-top: 34.87px;
+    }
+    .about-us-2{
+        display: none;
+    }
+    .about-us-3{
+        display: none;
+    }
+    .about-us-4{
+        display: none;
+    }
+    footer{
+        margin-top: 35px;
+        padding-top:20px ;
+    }
+    footer>div:first-of-type{
+        display: block;
+    }
+    .footer-titles{
+        margin: 0;
+        padding-bottom: 9px;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 18px;
+        color: #292929;
+    }
+    .about-us-children>p{
+        font-size: 14px;
+        line-height: 33px;
+        font-style: normal;
+        font-weight: normal;
+        color: #5F6D7C;
+        margin-bottom: 15px;
+    }
+    .footer-icons{
+        width: 36.266%;
+    }
+    .footer-end{
+        display: block;
+        padding:21.19px 0 20px 16px ;
+    }
+    .footer-end>span{
+        padding: 0;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 18px;
+    }
+    .advertisement>img{
+        height:146px ;
+        object-fit: cover;
     }
 }
  
